# scorewarrior_battle_client

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
assets/scenarios/: scenario_1.txt  scenario_2.txt  scenario_3.txt  scenario_4.txt
src/: main.cpp
src/Core/: CommandDispatcher.hpp  CommandProcessor.hpp  Map.hpp  Position.hpp  UnitManager.hpp  World.cpp  World.hpp
src/Core/Commands/: CommandRegistry.hpp  CreateMap.hpp  ICommand.hpp  March.hpp
src/Core/Events/: MapCreated.hpp  MarchEnded.hpp  MarchStarted.hpp  UnitDied.hpp  UnitMoved.hpp  UnitSpawned.hpp
src/Core/IO/: CommandParser.cpp  CommandParser.hpp  EventSystem.hpp
src/Core/IO/Visitors/: CommandParserVisitor.hpp  PrintFieldVisitor.hpp
src/Core/Registry/: RestrictionsRegistry.hpp
src/Core/Systems/: Movement.hpp  Spatial.hpp
src/Features/: UnitAssembler.hpp
src/Features/Commands/: SpawnHunter.cpp  SpawnHunter.hpp  SpawnSwordsman.cpp  SpawnSwordsman.hpp
src/Features/Domain/: Health.hpp  Melee.hpp  MeleeAttack.hpp  PoisonAbility.hpp  Ranged.hpp  RendingAbility.hpp
src/Features/Domain/Effects/: ActiveEffect.hpp  EffectData.hpp  EffectFactory.hpp  EffectList.hpp
src/Features/Events/: UnitAbilityUsed.hpp  UnitAttacked.hpp
src/Features/Systems/: Battle.hpp  Damage.hpp  Death.hpp  Effects.hpp  MeleeAttack.hpp  RangedAttack.hpp
src/Features/Systems/Effects/: EffectQueries.hpp  PoisonEffect.hpp  RendingEffect.hpp
src/Game/: Map.cpp  Map.hpp  Position.hpp  Unit.cpp  Unit.hpp  World.cpp  World.hpp
src/IO/Commands/: CreateMap.hpp  March.hpp  SpawnHunter.hpp
src/IO/Events/: UnitDied.hpp  UnitMoved.hpp
src/IO/System/: CommandParser.hpp  EventSystem.hpp
src/IO/System/Details/: CommandParserVisitor.hpp  PrintFieldVisitor.hpp
tests/integration/cmake/: AssertSnapshot.cmake
tests/integration/scenarios/: scenario_1_chances_0.txt  scenario_1_chances_100.txt  scenario_2_chances_0.txt  scenario_2_chances_100.txt  scenario_3_chances_0.txt  scenario_3_chances_100.txt  scenario_4_chances_100.txt  scenario_4_determenistic.txt  swordsman_deterministic.txt
